--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>Cvećara Drvo Života</h1>
     <form action="get.php" method="get" id="cvecara-form">
       <fieldset>
         <!-- Cvece section -->
-        <h1>Odaberite cvece:</h1>
+        <h2>Odaberite cveće:</h2>
         <div>
           <input
             type="number"
             name="ruze"
             id="ruze-input"
             placeholder="Cena po cvetu je 150 din."
-          />Ruze
+          />Ruže
         </div>
         <div>
           <input
@@ -38,7 +39,7 @@
           />Gerberi
         </div>
         <!-- Dodatni pokloni section -->
-        <h1>Dodatni pokloni</h1>
+        <h2>Dodatni pokloni:</h2>
         <div>
           <input
             type="checkbox"
@@ -54,21 +55,21 @@
             type="checkbox"
             name="sampanjac"
             id="sampanjac-chkbox"
-          />Sampanjac
+          />Šampanjac
         </div>
         <!-- Placanje section -->
-        <h1>Dodatni pokloni:</h1>
+        <h2>Plaćanje:</h2>
         <div>
-          <input type="radio" name="placanje" id="kes-radio" checked />Kes
+          <input type="radio" name="placanje" id="kes-radio" checked />Keš
         </div>
         <div>
           <input type="radio" name="placanje" id="kartica-radio" />Kartica
         </div>
         <!-- Buttons section -->
-        <button type="button" id="izracunaj-btn">Izracunaj</button>
-        <button type="reset" id="resetuj-btn">Resetuj</button>
+        <button type="button" class="btn" id="izracunaj-btn">Izračunaj</button>
+        <button type="reset" class="btn" id="resetuj-btn">Resetuj</button>
         <!-- Porudzbina section -->
-        <h1>Vasa Porudzbina:</h1>
+        <h2>Vaša Porudžbina:</h2>
         <section id="porudzbina-section"></section>
       </fieldset>
     </form>
