--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Cvećara Drvo Života</h1>
+    <h1 id="heading">Cvećara Drvo Života</h1>
     <form action="get.php" method="get" id="cvecara-form">
       <fieldset>
         <!-- Cvece section -->
