--- a/index.html
+++ b/index.html
@@ -9,70 +9,78 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 id="heading">Cvećara Drvo Života</h1>
-    <form action="get.php" method="get" id="cvecara-form">
-      <fieldset>
-        <!-- Cvece section -->
-        <h2>Odaberite cveće:</h2>
-        <div>
-          <input
-            type="number"
-            name="ruze"
-            id="ruze-input"
-            placeholder="Cena po cvetu je 150 din."
-          />Ruže
-        </div>
-        <div>
-          <input
-            type="number"
-            name="ljiljani"
-            id="ljiljani-input"
-            placeholder="Cena po cvetu je 120 din."
-          />Ljiljani
-        </div>
-        <div>
-          <input
-            type="number"
-            name="gerberi"
-            id="gerberi-input"
-            placeholder="Cena po cvetu je 70 din."
-          />Gerberi
-        </div>
-        <!-- Dodatni pokloni section -->
-        <h2>Dodatni pokloni:</h2>
-        <div>
-          <input
-            type="checkbox"
-            name="bombonjera"
-            id="bombonjera-chkbox"
-          />Bombonjera
-        </div>
-        <div>
-          <input type="checkbox" name="cokolada" id="cokolada-chkbox" />Cokolada
-        </div>
-        <div>
-          <input
-            type="checkbox"
-            name="sampanjac"
-            id="sampanjac-chkbox"
-          />Šampanjac
-        </div>
-        <!-- Placanje section -->
-        <h2>Plaćanje:</h2>
-        <div>
-          <input type="radio" name="placanje" id="kes-radio" checked />Keš
-        </div>
-        <div>
-          <input type="radio" name="placanje" id="kartica-radio" />Kartica
-        </div>
-        <!-- Buttons section -->
-        <button type="button" class="btn" id="izracunaj-btn">Izračunaj</button>
-        <button type="reset" class="btn" id="resetuj-btn">Resetuj</button>
-        <!-- Porudzbina section -->
-        <h2>Vaša Porudžbina:</h2>
-        <section id="porudzbina-section"></section>
-      </fieldset>
-    </form>
+    <main>
+      <h1 id="heading">Cvećara Drvo Života</h1>
+      <form action="get.php" method="get" id="cvecara-form">
+        <fieldset>
+          <!-- Cvece section -->
+          <h2>Odaberite cveće:</h2>
+          <div>
+            <input
+              type="number"
+              name="ruze"
+              id="ruze-input"
+              placeholder="Cena po cvetu je 150 din."
+            />Ruže
+          </div>
+          <div>
+            <input
+              type="number"
+              name="ljiljani"
+              id="ljiljani-input"
+              placeholder="Cena po cvetu je 120 din."
+            />Ljiljani
+          </div>
+          <div>
+            <input
+              type="number"
+              name="gerberi"
+              id="gerberi-input"
+              placeholder="Cena po cvetu je 70 din."
+            />Gerberi
+          </div>
+          <!-- Dodatni pokloni section -->
+          <h2>Dodatni pokloni:</h2>
+          <div>
+            <input
+              type="checkbox"
+              name="bombonjera"
+              id="bombonjera-chkbox"
+            />Bombonjera
+          </div>
+          <div>
+            <input
+              type="checkbox"
+              name="cokolada"
+              id="cokolada-chkbox"
+            />Cokolada
+          </div>
+          <div>
+            <input
+              type="checkbox"
+              name="sampanjac"
+              id="sampanjac-chkbox"
+            />Šampanjac
+          </div>
+          <!-- Placanje section -->
+          <h2>Plaćanje:</h2>
+          <div>
+            <input type="radio" name="placanje" id="kes-radio" checked />Keš
+          </div>
+          <div>
+            <input type="radio" name="placanje" id="kartica-radio" />Kartica
+          </div>
+          <!-- Buttons section -->
+          <button type="button" class="btn" id="izracunaj-btn">
+            Izračunaj
+          </button>
+          <button type="reset" class="btn" id="resetuj-btn">Resetuj</button>
+          <!-- Porudzbina section -->
+          <h2>Vaša Porudžbina:</h2>
+          <section id="porudzbina-section"></section>
+        </fieldset>
+      </form>
+    </main>
     <!-- SCRIPT -->
     <script src="app.js"></script>
   </body>
