--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               name="ruze"
               id="ruze-input"
               placeholder="Cena po cvetu je 150 din."
-            />Ruže
+            />&nbsp;&nbsp;&nbsp;Ruže
           </div>
           <div>
             <input
@@ -29,7 +29,7 @@
               name="ljiljani"
               id="ljiljani-input"
               placeholder="Cena po cvetu je 120 din."
-            />Ljiljani
+            />&nbsp;&nbsp;&nbsp;Ljiljani
           </div>
           <div>
             <input
@@ -37,7 +37,7 @@
               name="gerberi"
               id="gerberi-input"
               placeholder="Cena po cvetu je 70 din."
-            />Gerberi
+            />&nbsp;&nbsp;&nbsp;Gerberi
           </div>
           <!-- Dodatni pokloni section -->
           <h2>Dodatni pokloni:</h2>
@@ -46,29 +46,38 @@
               type="checkbox"
               name="bombonjera"
               id="bombonjera-chkbox"
-            />Bombonjera
+            />&nbsp;&nbsp;&nbsp;Bombonjera
           </div>
           <div>
             <input
               type="checkbox"
               name="cokolada"
               id="cokolada-chkbox"
-            />Cokolada
+            />&nbsp;&nbsp;&nbsp;Cokolada
           </div>
           <div>
             <input
               type="checkbox"
               name="sampanjac"
               id="sampanjac-chkbox"
-            />Šampanjac
+            />&nbsp;&nbsp;&nbsp;Šampanjac
           </div>
           <!-- Placanje section -->
           <h2>Plaćanje:</h2>
           <div>
-            <input type="radio" name="placanje" id="kes-radio" checked />Keš
+            <input
+              type="radio"
+              name="placanje"
+              id="kes-radio"
+              checked
+            />&nbsp;&nbsp;&nbsp;Keš
           </div>
           <div>
-            <input type="radio" name="placanje" id="kartica-radio" />Kartica
+            <input
+              type="radio"
+              name="placanje"
+              id="kartica-radio"
+            />&nbsp;&nbsp;&nbsp;Kartica
           </div>
           <!-- Buttons section -->
           <button type="button" class="btn" id="izracunaj-btn">
